imporve user profile page2

--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -9,7 +9,7 @@
                 	<% end %>
                 </li>
                 <li> <%= link_to history_user_path(@user) do %> 
-                		<i class="fa fa-list-alt fa-fw"></i> History Pembelian
+                		<i class="fa fa-list-alt fa-fw"></i> Catatan Pembelian
                 	<% end %>
                 </li>
             </ul>
