adding responsive table in view

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Dashboard") %>
+<% provide(:title, "Admin") %>
 <div class="text-center">
 <h1> Welcome <%= current_user.name %> </h1>
 <h2>It's <%= (Time.now).strftime("%A, %d %B %Y %I:%M %p") %></h2>
