--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,5 @@
-<%= render 'form' %>
+<% provide(:title, "Ubah") %>
+<div class="col-md-6 col-md-offset-3">
+	<legend> Ubah Akun </legend>
+	<%= render 'form' %>
+</div>
