--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,8 @@
-<h3> Edit Product Category </h3>
-<%= simple_form_for(@category) do |f| %>
-		<%= f.input :title, placeholder: "Title" %>
-		<%= f.button :submit, :class => "btn btn-success" %>
-<% end %>
+<% provide(:title, "Ubah Kategori") %>
+<div class="col-md-6 col-md-offset-3">
+	<h3> Ubah Kategori Produk </h3>
+	<%= simple_form_for(@category) do |f| %>
+			<%= f.input :title, label: "Nama Kategori", placeholder: "Nama " %>
+			<%= f.button :submit, 'Ubah Kategori',:class => "btn btn-success" %>
+	<% end %>
+</div>
