--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,8 @@
-<h3> New Product Category </h3>
-<%= simple_form_for(@category) do |f| %>
-		<%= f.input :title, placeholder: "Title" %>
-		<%= f.button :submit, :class => "btn btn-success" %>
-<% end %>
+<% provide(:title, "Tambah Kategori") %>
+<div class="col-md-6 col-md-offset-3">
+	<h3> Tambah Kategori Produk </h3>
+	<%= simple_form_for(@category) do |f| %>
+			<%= f.input :title, label:"Nama Kategori", placeholder: "Title" %>
+			<%= f.button :submit,'Tambah Kategori', :class => "btn btn-success" %>
+	<% end %>
+</div>
