--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,12 +1,12 @@
 <div class="col-md-6">
 <%= simple_form_for(@product) do |f| %>
 
-    <%= f.input :title %>
-    <%= f.input :description, input_html: {rows: '10'} %>
-    <%= f.input :image_url %>
-    <%= f.input :price %>
-    <%= f.association :category, label: "Product category" %>
-   	<%= f.button :submit, :class => "btn btn-success" %>
+    <%= f.input :title, label: "Nama Produk" %>
+    <%= f.input :description, input_html: {rows: '10'}, label: "Deskripsi" %>
+    <%= f.input :image_url, label: "Link Gambar" %>
+    <%= f.input :price, label: "Harga" %>
+    <%= f.association :category, label: "Kategori Produk" %>
+   	<%= f.button :submit,"Tambah Produk" ,:class => "btn btn-success" %>
 
 <% end %>
 </div>
