--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,40 +1,41 @@
-<% provide(:title, "All users") %>
-<table class="table table-stripped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
+<% provide(:title, "Pengguna") %>
+<div class="table-responsive">
+<%= will_paginate %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.phone %></td>
-        <td>
-          <%= link_to user, class: "btn btn-info btn-sm" do %> 
-            <i class="glyphicon glyphicon-eye-open"></i>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to edit_user_path(user), class: "btn btn-warning btn-sm" do %>
-            <i class="glyphicon glyphicon-pencil"></i>
-          <% end %>
-          </td>
-        <td>
-          <%= link_to user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" do %>
-              <i class="glyphicon glyphicon-trash"></i>
+        <th>Nama</th>
+        <th>Email</th>
+        <th>No Handphone</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.name %></td>
+          <td><%= user.email %></td>
+          <td><%= user.phone %></td>
+          <td>
+            <%= link_to user, class: "btn btn-info btn-sm" do %> 
+              <i class="glyphicon glyphicon-eye-open"></i>
             <% end %>
           </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path, class: "btn btn-success" %>
+          <td>
+            <%= link_to edit_user_path(user), class: "btn btn-warning btn-sm" do %>
+              <i class="glyphicon glyphicon-pencil"></i>
+            <% end %>
+            </td>
+          <td>
+            <%= link_to user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" do %>
+                <i class="glyphicon glyphicon-trash"></i>
+              <% end %>
+            </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= will_paginate %>
+</div>
+<%= link_to 'Tambah Pengguna', new_user_path, class: "btn btn-success" %>
