--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Orders") %>
-<div class="col-sm-12 col-md-12">
+<div class="col-xs-12 col-sm-12 col-md-12">
   <div class="table-responsive">
     <%= will_paginate %>
     <table class="table table-bordered">
