--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.users {
+	
+	.col-md-3 {
+		.nav li a {
+			background-color: #e4e4e4;
+			color: black;
+		}
+
+		.nav li a:hover {
+				background-color: #e4e4e4;
+				color: black;
+		}
+	}
+}
