--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Product") %>
+<div class="container-fluid">
 <div class="col-xs-12 col-sm-12 col-md-12">
 <div class="table-responsive">
   <%= will_paginate %>
@@ -36,3 +37,4 @@
 </div>
 </div>
 <%= link_to 'Tambah Produk', new_product_path, class: "btn btn-success" %>
+<div class="container-fluid">
