--- a/app/views/static_pages/question.html.erb
+++ b/app/views/static_pages/question.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Pertanyaan") %>
+<div class="container">
 <h3>Pertanyaan yang sering muncul</h3>
 <ol>
 	<li><b> Apakah jenis pengiriman yang di dukung AB OnlineShop?</b>
@@ -39,3 +40,4 @@
 		<ol> Kami memiliki dua jenis rekening yaitu Bank Negara Indonesia(BNI) dan Bank Mandiri, silahkan pilih akan di kirim ke mana pelunasan transaki yang di buat.</ol>
 	</li>
 </ol>
+</div>
