--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.products {
+	.col-md-4 {
+		.table-bordered tr td {
+			text-align: center;
+		}
+	}
+}
