--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -3,20 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .store {
-	.col-md-3 {
-		li {
+	.col-md-2, .col-md-3 {
 			a {
 				color: black;
-			
+				text-align: center;
 				&:hover{
 					background-color: transparent;
 					text-decoration: underline;
 				}	
 			}
-		}
 	}
 
-	h1 {
+	/*h1 {
 		margin: 0;
 		padding-bottom: 0.5em;
 		font: 150% sans-serif;
@@ -73,5 +71,5 @@
 			font-weight: bold;
 			margin-right: 3em
 		}
-	}
+	}*/
 }
