--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="col-md-6 col-md-offset-3">
 	<h3> Ubah Kategori Produk </h3>
 	<%= simple_form_for(@category) do |f| %>
-			<%= f.input :title, label: "Nama Kategori", placeholder: "Nama " %>
+			<%= f.input :title, label: "Nama Kategori", placeholder: "Nama Kategori " %>
 			<%= f.button :submit, 'Ubah Kategori',:class => "btn btn-success" %>
 	<% end %>
 </div>
