--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "kategori Produk") %>
+<div class="container-fluid">
 <% if @categories.any? %>
 <div class="table-responsive">
 	<table class="table table-striped">
@@ -26,3 +27,4 @@
 </table>
 <% end %>
 <%= link_to "Tambah kategori Produk", new_category_path, class: "btn btn-success" %> </a>
+</div>
