--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -2,7 +2,7 @@
 <div class="col-md-6 col-md-offset-3">
 	<h3> Tambah Kategori Produk </h3>
 	<%= simple_form_for(@category) do |f| %>
-			<%= f.input :title, label:"Nama Kategori", placeholder: "Title" %>
+			<%= f.input :title, label:"Nama Kategori", placeholder: "Nama Kategori" %>
 			<%= f.button :submit,'Tambah Kategori', :class => "btn btn-success" %>
 	<% end %>
 </div>
