--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <footer class="footer">
 	<div class="col-md-3 col-sm-12">
 	<small>
@@ -27,3 +28,4 @@
 	</ul>
 	</div>
 </footer>
+</div>
