--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,7 @@
 	</head>
 	<%= render "layouts/header" %>
 	<body class="<%= controller.controller_name %>">
-		<div class="container">
-
+				<div class="container">
 				<!-- render message -->		
 				<% flash.each do |alert_key, message_value| %>
 					<div class="alert alert-<%= alert_key %> alert-dismissable">
@@ -19,6 +18,7 @@
 						<%= message_value %> 
 					</div>
 				<% end %>
+				</div>
 
 			<div class="row">
 					<!-- <aside class="col-sm-3">
@@ -35,12 +35,10 @@
 						</div> 
 
 					</aside> -->
-					<div class="col-sm-12">
+					<div class="col-sm-12 col-md-12">
 							<%= yield %>
 					</div>
-			</div>	
-
-			<%= render "layouts/footer" %>
 		</div><!-- end div of container fluid-->
 	</body>
+	<%= render "layouts/footer" %>
 </html>
