--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Orders") %>
+<div class="container-fluid">
 <div class="col-xs-12 col-sm-12 col-md-12">
   <div class="table-responsive">
     <%= will_paginate %>
@@ -46,4 +47,5 @@
     </table>
     <%= will_paginate %>
   </div>
+</div>
 </div>
