--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, "Informasi") %>
+<div class="container">
 <h3>Informasi Terbaru</h3>
 <div class="panel panel-default">
   <div class="panel-body">
     Tokopedia sedang ada promo gratis ongkir, gunakan kode voucher <b>GRATISONGKIR</b> sekarang juga, buruan kunjungi kami di tokopedia <%= link_to "Kunjungi Sekarang", "https://www.tokopedia.com/arjuna-batik", target: "_blank", class: "btn btn-success" %>
   </div>
 </div>
-
+</div>
