--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,71 +1,114 @@
 <div class="container-fluid">
 <div class="row">
 	<div class="col-sm-12 col-md-12">
-		<h3> Produk Unggulan </h3>
-		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold;">
-					<%= link_to (image_tag @products.first.image_url, height: 250, width: 300, class: "img-rounded"), product_path(@products.first.id) %>
-					<%= link_to @products.first.title, product_path(@products.first.id) %>		
+		<h3> Produk Paling Laris! </h3>
+		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold; margin-bottom: 25px;">
+			<div class="row">
+				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px;">
+					<div class="card" style="height: 300px; width: 280px; padding-bottom: 10px">
+					  <%= link_to (image_tag @products.first.image_url, height: 300, width: 280, class: "card-img-top"), product_path(@products.first.id) %>
+					  <div class="card-block">
+					    <p class="card-title" style="text-align: center; font-weight: bold;">
+					    	<%= link_to @products.first.title, product_path(@products.first.id) %>
+					    </p>
+					  </div>
+					</div>
+				</div>
+			</div>		
 		</div>
-		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold;">
-					<%= link_to (image_tag @products.second.image_url, height: 250, width: 300, class: "img-rounded"), product_path(@products.second.id) %>
-					<%= link_to @products.second.title, product_path(@products.second.id) %>		
+		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold; margin-bottom: 25px;">
+			<div class="row">
+				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px; ">
+					<div class="card" style="height: 300px; width: 280px; padding-bottom: 10px">
+					  <%= link_to (image_tag @products.second.image_url, height: 300, width: 280, class: "card-img-top"), product_path(@products.second.id) %>
+					  <div class="card-block">
+					    <p class="card-title" style="text-align: center; font-weight: bold;">
+					    	<%= link_to @products.second.title, product_path(@products.second.id) %>
+					    </p>
+					  </div>
+					</div>
+				</div>
+			</div>		
 		</div>
-		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold;">
-					<%= link_to (image_tag @products.third.image_url, height: 250, width: 300, class: "img-rounded"), product_path(@products.third.id) %>
-					<%= link_to @products.third.title, product_path(@products.third.id) %>		
+		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold; margin-bottom: 25px;">
+			<div class="row">
+				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px;">
+					<div class="card" style="height: 300px; width: 280px; padding-bottom: 10px">
+					  <%= link_to (image_tag @products.third.image_url, height: 300, width: 280, class: "icard-img-top"), product_path(@products.third.id) %>
+					  <div class="card-block">
+					    <p class="card-title" style="text-align: center; font-weight: bold;">
+					    	<%= link_to @products.third.title, product_path(@products.third.id) %>
+					    </p>
+					  </div>
+					</div>
+				</div>
+			</div>		
 		</div>
-		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold;">
-					<%= link_to (image_tag @products.last.image_url, height: 250, width: 300, class: "img-rounded"), product_path(@products.last.id) %>
-					<%= link_to @products.last.title, product_path(@products.last.id) %>		
+		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold; margin-bottom: 25px;">
+			<div class="row">
+				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px;">
+					<div class="card" style="height: 300px; width: 280px; padding-bottom: 10px">
+					  <%= link_to (image_tag @products.last.image_url, height: 300, width: 280, class: "card-img-top"), product_path(@products.last.id) %>
+					  <div class="card-block">
+					    <p class="card-title" style="text-align: center; font-weight: bold;">
+					    	<%= link_to @products.last.title, product_path(@products.last.id) %>
+					    </p>
+					  </div>
+					</div>
+				</div>
+			</div>		
 		</div>
 	</div>
 </div>
 <hr>
 
 <div class="container-fluid">
-<div class="row">
-	<div class="col-md-3 col-sm-12">
-		<ul class="list group">
-			<li class="list-group-item disabled"><b>Kategori Produk</b></li>
-			<% if @categories.any? %>
-				<% @categories.each do |category| %>
-		  			<li class="list-group-item"><%= link_to category.title, store_show_path(category) %></li>
-		  		<% end %>
-		  	<% else %>
-		  		<li class="list-group-item">No Category right now!</li>
-		  	<% end %>
-		</ul>
-	</div>
-	<div class="col-md-9 col-sm-12">
-		<div class="row">
-			<% @products.each do |p| %>
-			<div class="col-sm-12 col-md-3" style="padding: 5px;">
-				<div class="card" style="height: 250px; width: 200px; ">
-				  <%= link_to (image_tag p.image_url, height: 180, width: 200, class: "card-img-top"), product_path(p) %>
-				  <div class="card-block">
-				    <p class="card-title" style="text-align: center; font-weight: bold;"><%= link_to p.title, product_path(p) %></p>
-				  </div>
-				</div>
-			</div>
-			<% end %>
-		</div>						
-		<!-- <h1> <%= t('.title_html')%> </h1> -->
-		<!-- <h1> Katalog Produk AB OnlineShop </h1>
-		<% cache ['store', Product.latest] do %>
-			<% @products.each do |product| %>
-				<% cache ['entry', product] do %>
-					<div class="entry">
-						<%= image_tag(product.image_url) %>
-						<h3><%= link_to product.title, product_path(product) %></h3>
-						<div class="price_line">
-							<span class="price"> Rp <%= number_with_delimiter(product.price) %> </span> 
-							<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
-							<%= button_to "Tambah ke Keranjang", line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
-						</div>
+	<div class="row">
+		<div class="col-sm-12 col-md-3">
+			<ul class="list group">
+				<li class="list-group-item disabled"><b>Kategori Produk</b></li>
+				<% if @categories.any? %>
+					<% @categories.each do |category| %>
+			  			<li class="list-group-item"><%= link_to category.title, store_show_path(category) %></li>
+			  		<% end %>
+			  	<% else %>
+			  		<li class="list-group-item">No Category right now!</li>
+			  	<% end %>
+			</ul>
+		</div>
+		<div class="col-sm-12 col-md-9">
+			<div class="row">
+				<% @products.each do |p| %>
+				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px;">
+					<div class="card" style="height: 250px; width: 200px; ">
+					  <%= link_to (image_tag p.image_url, height: 200, width: 180, class: "card-img-top"), product_path(p) %>
+					  <div class="card-block">
+					    <p class="card-title" style="text-align: center; font-weight: bold;"><%= link_to p.title, product_path(p) %></p>
+					  </div>
 					</div>
+				</div>
 				<% end %>
-			<% end %>
-		<% end %> -->
+			</div>						
+			<!-- <h1> <%= t('.title_html')%> </h1> -->
+			<!-- <h1> Katalog Produk AB OnlineShop </h1>
+			<% cache ['store', Product.latest] do %>
+				<% @products.each do |product| %>
+					<% cache ['entry', product] do %>
+						<div class="entry">
+							<%= image_tag(product.image_url) %>
+							<h3><%= link_to product.title, product_path(product) %></h3>
+							<div class="price_line">
+								<span class="price"> Rp <%= number_with_delimiter(product.price) %> </span> 
+								<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
+								<%= button_to "Tambah ke Keranjang", line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
+							</div>
+						</div>
+					<% end %>
+				<% end %>
+			<% end %> -->
+			<div class="text-right">
+			<%= will_paginate @products %>
+			</div>
+		</div>
 	</div>
-</div>
 </div>
