--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -14,6 +14,34 @@
 			}
 	}
 
+	.card {
+	border:1px solid gray;
+	margin-bottom: 10px;
+	text-align: center;
+	}
+
+	.card img {
+		padding: 10px 0px 10px 0px;
+		margin: 10px 0px 10px 0px;
+	}
+	.card-block {
+		height: 100px;
+		padding-top: 5px;
+		padding-bottom: 1px;
+		border-top:1px dotted gray;
+	}
+
+	.card-block a {
+		color: black;
+		font-weight: bold;
+	}
+
+	.card-block a:hover {
+		color: black;
+		font-weight: bolder;
+		background-color: transparent;
+	}
+
 	/*h1 {
 		margin: 0;
 		padding-bottom: 0.5em;
