--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,32 +2,32 @@
 <div class="row">
 	<div class="col-sm-12 col-md-12">
 		<h3> Produk Paling Laris! </h3>
-		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold; margin-bottom: 25px;">
+		<div class="col-sm-12 col-md-3">
 			<div class="row">
-				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px;">
-					<div class="card" style="height: 300px; width: 280px; padding-bottom: 10px">
-					  <%= link_to (image_tag @products.first.image_url, height: 300, width: 280, class: "card-img-top"), product_path(@products.first.id) %>
-					  <div class="card-block">
-					    <p class="card-title" style="text-align: center; font-weight: bold;">
-					    	<%= link_to @products.first.title, product_path(@products.first.id) %>
-					    </p>
-					  </div>
-					</div>
-				</div>
+				<div class="col-sm-12 col-md-3 col-lg-2">
+	                <div class="card" style="border: none;">
+	                    <%= link_to (image_tag @products.first.image_url, height: 300, width: 280, class: "card-img-top"), product_path(@products.first.id) %>
+	                     <div class="card-block" style="width: 280px;">
+	                        <div class="card-text">
+	                           <%= link_to @products.first.title, product_path(@products.first.id) %>
+	                        </div>
+	                    </div> 
+	                </div>
+	            </div>
 			</div>		
 		</div>
-		<div class="col-sm-12 col-md-3" style="text-align: center; font-weight: bold; margin-bottom: 25px;">
+		<div class="col-sm-12 col-md-3">
 			<div class="row">
-				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px;">
-					<div class="card" style="height: 300px; width: 280px; padding-bottom: 10px">
-					  <%= link_to (image_tag @products.last.image_url, height: 300, width: 280, class: "card-img-top"), product_path(@products.last.id) %>
-					  <div class="card-block">
-					    <p class="card-title" style="text-align: center; font-weight: bold;">
-					    	<%= link_to @products.last.title, product_path(@products.last.id) %>
-					    </p>
-					  </div>
-					</div>
-				</div>
+				<div class="col-sm-12 col-md-3 col-lg-2">
+	                <div class="card" style="border: none;">
+	                    <%= link_to (image_tag @products.first.image_url, height: 300, width: 280, class: "card-img-top"), product_path(@products.first.id) %>
+	                     <div class="card-block" style="width: 280px;">
+	                        <div class="card-text">
+	                           <%= link_to @products.first.title, product_path(@products.first.id) %>
+	                        </div>
+	                    </div> 
+	                </div>
+	            </div>
 			</div>		
 		</div>
 	</div>
@@ -50,34 +50,19 @@
 		</div>
 		<div class="col-sm-12 col-md-9">
 			<div class="row">
-				<% @products.each do |p| %>
-				<div class="col-xs-6 col-sm-6 col-md-3" style="padding: 5px;">
-					<div class="card" style="height: 250px; width: 200px; ">
-					  <%= link_to (image_tag p.image_url, height: 200, width: 180, class: "card-img-top"), product_path(p) %>
-					  <div class="card-block">
-					    <p class="card-title" style="text-align: center; font-weight: bold;"><%= link_to p.title, product_path(p) %></p>
-					  </div>
-					</div>
-				</div>
-				<% end %>
-			</div>						
-			<!-- <h1> <%= t('.title_html')%> </h1> -->
-			<!-- <h1> Katalog Produk AB OnlineShop </h1>
-			<% cache ['store', Product.latest] do %>
-				<% @products.each do |product| %>
-					<% cache ['entry', product] do %>
-						<div class="entry">
-							<%= image_tag(product.image_url) %>
-							<h3><%= link_to product.title, product_path(product) %></h3>
-							<div class="price_line">
-								<span class="price"> Rp <%= number_with_delimiter(product.price) %> </span> 
-								<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
-								<%= button_to "Tambah ke Keranjang", line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
-							</div>
-						</div>
-					<% end %>
-				<% end %>
-			<% end %> -->
+	        	<% @products.each do |p| %>
+	            <div class="col-sm-6 col-md-4 col-lg-3">
+	                <div class="card">
+	                    <%= link_to (image_tag p.image_url, height: 200, width: 180, class: "card-img-top"), product_path(p) %>
+	                    <div class="card-block">
+	                        <div class="card-text">
+	                           <%= link_to p.title, product_path(p) %>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	            <% end %>
+	        </div>					
 			<div class="text-right">
 			<%= will_paginate @products %>
 			</div>
