--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,16 @@
-
 <div class="container">
 <footer class="footer">
-	<div class="col-md-3 col-sm-12">
+	<div class="col-md-3 col-sm-6">
 	<small>
 		&copy AB OnlineShop 2017 
 	</small>
 	</div>
-	<div class="col-md-9 col-sm-12">
+	<div class="col-md-9 col-sm-6" style="display: inline-block;">
 	<ul>
 		<!-- new style without translation -->
 		<li>  <%= link_to 'Pertanyaan', question_path %> </li>
 		<li>  <%= link_to 'Informasi', news_path %> </li>
-		<li>  <%= link_to 'Hubungi Kami', contact_path %> </a> </li>
+		<li>  <%= link_to 'Hubungi Kami', contact_path %> </li>
 		<!-- <li> <%= link_to t('.questions'), question_path %>  </li>
 		<li> <%= link_to t('.news'), news_path %> </a> </li>
 		<li> <%= link_to t('.contact'), contact_path %> </li> -->
