--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,1 +1,8 @@
+<div class="container-fluid">
+<div class="col-sm-12 col-md-3">
+  <%= render 'admin/show_navbar' %>
+</div>
+<div class="col-sm-12 col-md-9">
 <%= render 'form' %>
+</div>
+</div>
