--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,9 @@
 <% provide(:title, "Detail Pesanan") %>
+<div class="container-fluid">
+<div class="col-sm-12 col-md-3">
+  <%= render 'admin/show_navbar' %>
+</div>
+<div class="col-sm-12 col-md-9">
 <div class="table-responsive">
 	<table class="table table-bordered">
 		<thead>
@@ -38,4 +43,6 @@
 		</tbody>
 		<% end %>
 	</table>
+</div>
+</div>
 </div>
