--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Admin controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.admin {
+		.col-md-3 {
+		.nav li a {
+			background-color: #e4e4e4;
+			color: black;
+		}
+
+		.nav li a:hover {
+				background-color: #e4e4e4;
+				color: black;
+		}
+	}
+}
