--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -14,33 +14,39 @@
 			}
 	}
 
+
 	.card {
 	border:1px solid gray;
 	margin-bottom: 10px;
 	text-align: center;
+		
+		img {
+			padding: 10px 0px 10px 0px;
+			margin: 10px 0px 10px 0px;
+			width: 100%;
+			height: 100%;
+		}
+	
+		.card-block {
+			height: 100px;
+			padding-top: 5px;
+			padding-bottom: 1px;
+			border-top:1px dotted gray;
+
+			a {
+				color: black;
+				font-weight: bold;
+				
+				&:hover {
+					color: black;
+					font-weight: bolder;
+					background-color: transparent;
+				}
+			}
+		}
+
 	}
 
-	.card img {
-		padding: 10px 0px 10px 0px;
-		margin: 10px 0px 10px 0px;
-	}
-	.card-block {
-		height: 100px;
-		padding-top: 5px;
-		padding-bottom: 1px;
-		border-top:1px dotted gray;
-	}
-
-	.card-block a {
-		color: black;
-		font-weight: bold;
-	}
-
-	.card-block a:hover {
-		color: black;
-		font-weight: bolder;
-		background-color: transparent;
-	}
 
 	/*h1 {
 		margin: 0;
