--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, "kategori Produk") %>
 <div class="container-fluid">
+<div class="col-sm-12 col-md-3">
+    <%= render 'admin/show_navbar' %>
+</div>
+<div class="col-xs-12 col-sm-12 col-md-9">
 <% if @categories.any? %>
 <div class="table-responsive">
 	<table class="table table-striped">
@@ -26,5 +30,6 @@
 	</tr>
 </table>
 <% end %>
-<%= link_to "Tambah kategori Produk", new_category_path, class: "btn btn-success" %> </a>
+<%= link_to "Tambah kategori Produk", new_category_path, class: "btn btn-success" %>
+</div>
 </div>
