--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,13 @@
 <% provide(:title, "Tambah Kategori") %>
-<div class="col-md-6 col-md-offset-3">
+<div class="container-fluid">
+<div class="col-sm-12 col-md-3">
+    <%= render 'admin/show_navbar' %>
+</div>
+<div class="col-sm-12 col-md-9">
 	<h3> Tambah Kategori Produk </h3>
 	<%= simple_form_for(@category) do |f| %>
 			<%= f.input :title, label:"Nama Kategori", placeholder: "Nama Kategori" %>
 			<%= f.button :submit,'Tambah Kategori', :class => "btn btn-success" %>
 	<% end %>
+</div>
 </div>
