--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	</head>
 	<%= render "layouts/header" %>
 	<body class="<%= controller.controller_name %>">
-				<div class="container">
+				<div class="container-fluid">
 				<!-- render message -->		
 				<% flash.each do |alert_key, message_value| %>
 					<div class="alert alert-<%= alert_key %> alert-dismissable">
