--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, "Orders") %>
 <div class="container-fluid">
-<div class="col-xs-12 col-sm-12 col-md-12">
+<div class="col-sm-12 col-md-3">
+  <%= render 'admin/show_navbar' %>
+</div>
+<div class="col-xs-12 col-sm-12 col-md-9">
+  <h3>Daftar Semua Transaksi</h3>
   <div class="table-responsive">
     <%= will_paginate %>
     <table class="table table-bordered">
