--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,9 @@
-<%= render 'form' %>
+<div class="container-fluid">
+<div class="col-sm-12 col-md-3">
+  <%= render 'admin/show_navbar' %>
+</div>
+<div class="col-sm-12 col-md-9">
+  <%= render 'form' %>
+</div>
+</div>
 
