--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, "Pengguna") %>
-<div class="col-xs-12 col-sm-12 col-md-12">
+<div class="container-fluid">
+<div class="col-sm-12 col-md-3">
+    <%= render 'admin/show_navbar' %>
+</div>
+<div class="col-xs-12 col-sm-12 col-md-9">
 <div class="table-responsive">
 <%= will_paginate %>
   <table class="table table-striped">
@@ -39,5 +43,6 @@
   </table>
   <%= will_paginate %>
 </div>
-</div>
 <%= link_to 'Tambah Pengguna', new_user_path, class: "btn btn-success" %>
+</div>
+</div>
