--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Daftar") %>
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
 	<legend> Daftar Akun </legend>
 	<%= render 'form' %>
 </div>
