imporve front end6

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -4,6 +4,9 @@
 
 .store {
 	.col-md-2, .col-md-3 {
+			img {
+				padding: 10px 5px 10px 5px;
+			}
 			a {
 				color: black;
 				text-align: center;
