--- a/app/views/static_pages/question.html.erb
+++ b/app/views/static_pages/question.html.erb
@@ -3,7 +3,7 @@
 <h3>Pertanyaan yang sering muncul</h3>
 <ol>
 	<li><b> Apakah jenis pengiriman yang di dukung AB OnlineShop?</b>
-			<ol>Pengiriman yang di dukung yaitu pengiriman dengan go jek by go send</ol>
+			<ol>Pengiriman yang di dukung yaitu pengiriman dengan GO-SEND</ol>
 	</li>
 	<li><b> Daerah mana saja yang bisa menggunakan jasa pengiriman dengan go jek by go send untuk membeli produk di AB OnlineShop?</b>
 			<ol>Untuk daerah yang di dukung adalah wilayah Jakarta, Bogor, Tangerang, Bekasi, Depok (JABODETABEK)</ol>
