--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,6 @@
 
 	<%= f.input :gender, label: "Jenis Kelamin", as: :radio_buttons, collection: ['Laki-Laki','Perempuan']%>
 
-	<%= f.button :submit, 'Buat Akun',:class => "btn btn-success btn-block" %>
+	<%= f.button :submit, 'Buat Akun',:class => "btn btn-success btn-lg btn-block" %>
 
 <% end %>
