--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
     <%= render 'admin/show_navbar' %>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-9">
+<h3> Daftar Semua Pengguna </h3>
 <div class="table-responsive">
 <%= will_paginate %>
   <table class="table table-striped">
