--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
 <% provide(:title, @user.name) %>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-3 col-sm-12">
+<div class="container-fluid">
+    
+        <div class="col-sm-12 col-md-3">
             <%= render 'show_navbar' %>
         </div>
-        <div class="col-md-9 col-sm-12 well">
+        <div class="col-sm-12 col-md-9">
             <h3>Profil</h3>
             <div class="table-responsive">
 			<table class="table table-stripped">
@@ -30,5 +30,5 @@
 			</table>
 			</div>
         </div>
-    </div>
+    
 </div>
