--- a/app/views/store/show.html.erb
+++ b/app/views/store/show.html.erb
@@ -1,17 +1,21 @@
 <div class="container-fluid">
-<div class="col-sm-12 col-md-12">				
-	<h1><u> <%= @category.title %> </u> </h1>
+	<div class="col-sm-12 col-md-12">
+		<h3><%= @category.title %></h3>
 		<div class="row">
-			<% @products.each do |p| %>
-			<div class="col-sm-12 col-md-2" style="padding: 5px;">
-				<div class="card" style="height: 250px; width: 200px; ">
-				  <%= link_to (image_tag p.image_url, height: 180, width: 200, class: "card-img-top"), product_path(p) %>
-				  <div class="card-block">
-				    <p class="card-title" style="text-align: center; font-weight: bold;"><%= link_to p.title, product_path(p) %></p>
-				  </div>
-				</div>
-			</div>
-			<% end %>
+	    	<% @products.each do |p| %>
+	        <div class="col-sm-6 col-md-4 col-lg-3">
+	            <div class="card">
+	                <%= link_to (image_tag p.image_url, height: 200, width: 180, class: "card-img-top"), product_path(p) %>
+	                <div class="card-block">
+	                    <div class="card-text">
+	                       <%= link_to p.title, product_path(p) %>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	        <% end %>
+	    </div>					
+		<div class="text-right">
 		</div>
-</div>
+	</div>
 </div>
